# office365-audit-log-collector

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: release.yaml  verify.yaml
Release/ConfigExamples/: exchangeMailboxGraph.yaml  fullConfig.yaml  graylog.yaml  intune.yaml  ualGraph.yaml
Release/Scripts/: Get-ExchangeMailboxAuditLogs.ps1
src/: api_connection.rs  api_connection_graph.rs  collector.rs  config.rs  data_structures.rs  main.rs  ualgraph.rs
src/interactive_mode/: interactive.rs  mod.rs  tui.rs
src/interfaces/: azure_oms_interface.rs  file_interface.rs  fluentd_interface.rs  graylog_interface.rs  interactive_interface.rs  interface.rs  mod.rs
